k8s-setup/bookinfo/NetworkPolicy/services/details/ingress.yaml
# Allow ingress traffic from productpage to details service
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-details-in
  namespace: dev1
spec:
  tier: default
  order: 300
  selector: app == "details"
  ingress:
  - action: Allow
    protocol: TCP
    source:
      services:
        name: productpage
        namespace: dev1
    destination:
      ports: [9080]
      
  # Allow direct pod-to-pod access
  - action: Allow
    protocol: TCP
    source:
      selector: app == "productpage"
      namespaceSelector: name == "dev1"
    destination:
      ports: [9080]
